# Cis-GS

./: .gitignore  .readthedocs.yaml  BUILD.md  CIS-GS_TECHNICAL_DOCUMENTATION.md  CITATION.cff  Cis-GS.spec  LICENSE  MANIFEST.in  README.md  animaltfdb_importer.py  app_v4_open.py  benchmark.py  benchmark_plots.py  build_linux.sh  build_mac.sh  build_windows.bat  build_windows.ps1  comparison_table.py  planttfdb_importer.py  pyproject.toml  requirements.txt  setup_and_build.bat
.github/workflows/: docs.yml  publish.yml
cis_gs/: __init__.py  __main__.py  animaltfdb_importer.py  app.py  chromosome_utils.py  cli.py  cli_enrichment.py  cli_interactive.py  create_assets.py  planttfdb_importer.py
cis_gs/enrichment/: __init__.py  core.py  idmap.py  kegg.py  plots.py
data/: Arachis_vs_Lotus_matches.csv  Arachis_vs_Lotus_matches_unique.csv  Arachis_vs_Lotus_matches_with_annotations.csv  Arachis_vs_QueryArchis_matches.csv  Arachis_vs_QueryArchis_matches_unique.csv  Arachis_vs_QueryArchis_matches_unique_with_annotations.csv  README.md  arachis_blast_results.tsv  common_Arachis_genes_with_annotations.csv  common_genes.csv
docs/: Makefile  index.html  make.bat  requirements.txt
docs/source/: changelog.rst  citation.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: enrichment.rst  idmap.rst  index.rst
docs/source/cli/: commands.rst  index.rst  wizard.rst
docs/source/gui/: contact_tab.rst  index.rst  ncbi_fetch.rst
docs/source/workflow/: index.rst  step1_promoters.rst  step2_motif_search.rst  step3_motif_logos.rst  step4_expression.rst  step5_coexpression.rst  step6_kmeans.rst  step7_kegg.rst
src/: README.md
src/01_data_preprocessing/: add_arahy_prefix.py  extract_cis_in_genes.py
src/01_genome_preprocessing/: strand_normalization.py
src/02_cis_element_detection/: scan_cis_elements.py
src/03_pwm_analysis/: build_pwm.py  pwm_frequency_tables.py  pwm_kde_plots.py  pwm_scoring.py  pwm_summary_tables.py
src/04_expression_analysis/: README.md  arachis_differential_expression.py  cross_species_mapping.py  final_gene_shortlist.py  kallisto_quantification.py  lotus_differential_expression.py  lotus_kallisto_quant.py  lotus_visualisation.py  prepare_coexpression_matrix.py  timepoint_expression_heatmap.py  tissue_expression_heatmap.py  tpm_log2fc_analysis.py
src/05_coexpression_analysis/: README.md  correlation_matrix.py  cyclops_centered_network.py  module_detection_louvain.py  tom_analysis.py
src/06_functional_annotation/: annotation_summary.py  blast_search.py  clean_ncbi_ids.py  extract_gene_sequences.py  ncbi_entrez_fetch.py
src/07_visualisation/: README.md  chromosome_visualisation.py  coexpression_heatmaps.py  coexpression_network_plots.py  gene_level_visualisation.py
tests/: test_smoke.py
